force-app/main/default/src/objects/PJN_Member_Plan__c/PJN_Member_Plan__c.object-meta.xml
<CustomObject>
    <description>Mavens custom object for Member Plans.</description>
    <label>Member Plan</label>
    <nameField>
        <displayFormat>MP-{00000}</displayFormat>
        <label>Member Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>