force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_BV_Completed__c.field-meta.xml
<CustomField>
    <fullName>MVN_BV_Completed__c</fullName>
    <formula>MVN_Coverage_Benefit_Count__c  &gt; 0</formula>
    <label>BV Completed</label>
    <type>Checkbox</type>
</CustomField>