force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Claim_Address__c.field-meta.xml
<CustomField>
    <fullName>MVN_Claim_Address__c</fullName>
    <description>Address where claims for this member plan should be mailed.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Claim Address</label>
    <type>TextArea</type>
</CustomField>