force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Coverage_Benefit_Count__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Benefit_Count__c</fullName>
    <label>Coverage Benefit Count</label>
    <summaryForeignKey>PJN_Coverage_Benefit__c.PJN_Member_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>