force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Coverage_Benefits_Buy_Bill_Medical__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Benefits_Buy_Bill_Medical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Benefits - Buy &amp; Bill Medical</label>
    <referenceTo>PJN_Coverage_Benefit__c</referenceTo>
    <relationshipLabel>Member Plans (Buy &amp; Bill Medical Coverage Benefits)</relationshipLabel>
    <relationshipName>Member_Plans_Buy_Bill_Medical</relationshipName>
    <type>Lookup</type>
</CustomField>