force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Coverage_Benefits_Home_Infusion__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Benefits_Home_Infusion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Benefits - Home Infusion</label>
    <referenceTo>PJN_Coverage_Benefit__c</referenceTo>
    <relationshipLabel>Member Plans (Home Infusion Coverage Benefits)</relationshipLabel>
    <relationshipName>Member_Plans_Home_Infusion</relationshipName>
    <type>Lookup</type>
</CustomField>