force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Coverage_Benefits_SP_Medical__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Benefits_SP_Medical__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Benefits - SP Medical</label>
    <referenceTo>PJN_Coverage_Benefit__c</referenceTo>
    <relationshipLabel>Member Plans (SP Medical Coverage Benefits)</relationshipLabel>
    <relationshipName>Member_Plans_SP_Medical</relationshipName>
    <type>Lookup</type>
</CustomField>