force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Coverage_Benefits_SP_Prescription__c.field-meta.xml
<CustomField>
    <fullName>MVN_Coverage_Benefits_SP_Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage Benefits - SP Prescription</label>
    <referenceTo>PJN_Coverage_Benefit__c</referenceTo>
    <relationshipLabel>Member Plans (SP Prescription Coverage Benefits)</relationshipLabel>
    <relationshipName>Member_Plans_SP_Prescription</relationshipName>
    <type>Lookup</type>
</CustomField>