force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Drug_Copay_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>MVN_Drug_Copay_Coinsurance__c</fullName>
    <description>Displays the SP Prescription Drug Copay/Coinsurance value if Coverage Type is Pharmacy and the SP Medical Copay/Coinsurance value if Coverage Type is Medical. Used for SP triage.</description>
    <formula>CASE(PJN_Coverage_Type__c, 
&quot;Pharmacy&quot;, MVN_Coverage_Benefits_SP_Prescription__r.MVN_Drug_Copay_Coinsurance__c, 
&quot;Medical&quot;, MVN_Coverage_Benefits_SP_Medical__r.MVN_Drug_Copay_Coinsurance__c,
null)</formula>
    <label>Drug Copay/Coinsurance</label>
    <type>Text</type>
</CustomField>