force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Employer_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Employer_Name__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Employer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>