force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Last_Prior_Authorization__c.field-meta.xml
<CustomField>
    <fullName>MVN_Last_Prior_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recently created or updated Prior Authorization for the Member Plan.</description>
    <label>Last Prior Authorization</label>
    <referenceTo>PJN_Prior_Authorization__c</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>