force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Payer_Contact__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer_Contact__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payer Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>