force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Payer_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Plan</label>
    <referenceTo>MVN_Payer_Plan__c</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>