force-app/main/default/src/objects/PJN_Member_Plan__c/fields/MVN_Payer_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Payer_Plan_Name__c</fullName>
    <description>Field to display the Payer Plan Name as text.</description>
    <formula>MVN_Payer_Plan__r.Name</formula>
    <label>Payer Plan Name</label>
    <type>Text</type>
</CustomField>