force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_BIN__c.field-meta.xml
<CustomField>
    <fullName>PJN_BIN__c</fullName>
    <description>Patient&apos;s insurance plan banking identification number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BIN</label>
    <length>6</length>
    <type>Text</type>
</CustomField>