force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Cardholder_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Cardholder_Name__c</fullName>
    <description>Patient&apos;s insurance plan cardholder name.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Cardholder Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>