force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <description>Patient care plan for which the member plan was captured.</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>PJN_Member_Plans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>