force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Care_Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan_Number__c</fullName>
    <formula>PJN_Care_Plan__r.CaseNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Plan Number</label>
    <type>Text</type>
</CustomField>