force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Coverage_Order__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Order__c</fullName>
    <description>Picklist for the plan&apos;s coverage order number as part of the coordination of benefits rules.</description>
    <label>Coverage Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>