force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Type__c</fullName>
    <description>Type of coverage provided by the plan.</description>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>