force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_Date__c</fullName>
    <description>Date insurance plan effective from.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Effective Date</label>
    <type>Date</type>
</CustomField>