force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expiration_Date__c</fullName>
    <description>Date insurance plan effective to.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy End Date</label>
    <type>Date</type>
</CustomField>