force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Group__c.field-meta.xml
<CustomField>
    <fullName>PJN_Group__c</fullName>
    <description>Patient&apos;s insurance plan group number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>