force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Group_Number__c</fullName>
    <description>Text(64) Group number.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Group Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>