force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Insurance_ID__c.field-meta.xml
<CustomField>
    <fullName>PJN_Insurance_ID__c</fullName>
    <description>Patient&apos;s insurance plan ID.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Insurance ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>