force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Insurance_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Insurance_ID_Number__c</fullName>
    <description>Text(64) Insurance ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance ID Number</label>
    <length>64</length>
    <type>Text</type>
</CustomField>