force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Insurance_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Insurance_Phone_Number__c</fullName>
    <description>Phone field for insurance.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Phone Number</label>
    <type>Phone</type>
</CustomField>