force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Next_Coverage_Investigation_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Next_Coverage_Investigation_Date__c</fullName>
    <description>Checks which expires first, the PA or the Member Plan, and returns the earliest value. This can inform the user when to start thinking about the next Benefits Verification.</description>
    <formula>IF( PJN_Expiration_Date__c &lt;= PJN_Next_PA_Expiration_Date__c,
PJN_Expiration_Date__c,
PJN_Next_PA_Expiration_Date__c
)</formula>
    <label>Next Coverage Investigation Date</label>
    <type>Date</type>
</CustomField>