force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Next_PA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Next_PA_Expiration_Date__c</fullName>
    <description>Shows the next upcoming date when an approved Prior Authorisation will expire.</description>
    <inlineHelpText>Shows the next upcoming date when an approved Prior Authorisation will expire.</inlineHelpText>
    <label>Next PA Expiration Date</label>
    <summarizedField>PJN_Prior_Authorization__c.PJN_Expiration_Date__c</summarizedField>
    <summaryFilterItems>
        <field>PJN_Prior_Authorization__c.PJN_Outcome__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryForeignKey>PJN_Prior_Authorization__c.PJN_Member_Plan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>