force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Patient__c.field-meta.xml
<CustomField>
    <fullName>PJN_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient who is a member of an insurance plan.</description>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PJN_Patient</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Plans</relationshipLabel>
    <relationshipName>PJN_Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>