force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Payer__c.field-meta.xml
<CustomField>
    <fullName>PJN_Payer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payer related to a Member Plan.</description>
    <label>Payer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>IndustriesPayer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Plans (Payer)</relationshipLabel>
    <relationshipName>Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>