force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Payer_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Payer_Name__c</fullName>
    <description>Field to display the Payer Name as text.</description>
    <formula>PJN_Payer__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer Name</label>
    <type>Text</type>
</CustomField>