force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_PBM__c.field-meta.xml
<CustomField>
    <fullName>PJN_PBM__c</fullName>
    <description>Patient&apos;s insurance plan pharmacy benefit manager.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PBM</label>
    <length>50</length>
    <type>Text</type>
</CustomField>