force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_PCN__c.field-meta.xml
<CustomField>
    <fullName>PJN_PCN__c</fullName>
    <description>Patient&apos;s insurance plan primary care network.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>PCN</label>
    <length>25</length>
    <type>Text</type>
</CustomField>