force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>PJN_Plan_Name__c</fullName>
    <description>Patient&apos;s insurance plan name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Plan Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>