force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Plan_Type__c</fullName>
    <description>Picklist, insurance plan type.</description>
    <label>Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Private/Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>