force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Relationship_to_Cardholder__c.field-meta.xml
<CustomField>
    <fullName>PJN_Relationship_to_Cardholder__c</fullName>
    <description>Cardholder relationship.</description>
    <label>Relationship to Cardholder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other Relationship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>