force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Set_as_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Set_as_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checkbox to indicate that a patient&apos;s member plan should be set to active. Triggers the member plan to be stamped into the PJN_Primary_Member_Plan__c, PJN_Secondary_Member_Plan__c, or PJN_Tertiary_Member_Plan__c case fields (depending on member plan&apos;s PJN_Coverage_Order__c value) and sets the PJN_Active__c checkbox on the member plan to TRUE.</description>
    <label>Set as Active</label>
    <type>Checkbox</type>
</CustomField>