force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Set_as_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>PJN_Set_as_Tertiary__c</fullName>
    <description>Indicator to show if this should be set as the tertiary member plan</description>
    <formula>IF( AND(PJN_Set_as_Active__c, TEXT(PJN_Coverage_Order__c) == &apos;Tertiary&apos; ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Set as Tertiary</label>
    <type>Checkbox</type>
</CustomField>