force-app/main/default/src/objects/PJN_Member_Plan__c/fields/PJN_Therapy_Covered__c.field-meta.xml
<CustomField>
    <fullName>PJN_Therapy_Covered__c</fullName>
    <description>Captures whether the Member Plan covers a patient&apos;s drug therapy.</description>
    <label>Therapy Covered?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Covered</fullName>
            </value>
            <value>
                <fullName>Covered with PA</fullName>
            </value>
            <value>
                <fullName>Not Covered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>